fixed bugs, added admin interface

--- a/static/own-styles.css
+++ b/static/own-styles.css
@@ -46,7 +46,7 @@ body {
     margin: 2em 1em;
 }
 
-.image_gallery {
+.same_height {
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -54,7 +54,7 @@ body {
     flex-wrap: wrap;
 }
 
-.image_gallery [class*="col-"] {
+.same_height [class*="col-"] {
     display: flex;
     flex-direction: column;
 }
@@ -124,4 +124,16 @@ body {
 }
 #side a {
     color: rgba(62,62,132,0.8);
+}
+
+#side {
+white-space: -moz-pre-wrap !important;  /* Mozilla, since 1999 */
+white-space: -pre-wrap;      /* Opera 4-6 */
+white-space: -o-pre-wrap;    /* Opera 7 */
+white-space: pre-wrap;       /* css-3 */
+word-wrap: break-word;       /* Internet Explorer 5.5+ */
+white-space: -webkit-pre-wrap; /* Newer versions of Chrome/Safari*/
+word-break: break-all;
+white-space: normal;
+
 }
