--- a/templates/monocle_cms/login_page.html
+++ b/templates/monocle_cms/login_page.html
@@ -5,22 +5,30 @@ Login - Monoclecat
 {% endblock %}
 
 {% block main %}
+    {% if request.user.is_superuser %}
+    <h1>Logout</h1>
+    {% else %}
     <h1>Login</h1>
-
-    {% ifequal login_success False %}<p><span class="label label-warning">{{ error_message }}</span></p>{% endifequal %}
-    {% ifequal login_success True %}<p><span class="label label-success">{{ error_message }}</span></p>{% endifequal %}
+    {% endif %}
 
     <form class="form-inline" action="{% url 'monocle_cms:login' %}" method="post">
     {% csrf_token %}
-        <div class="form-group">
-            <label for="username">Username</label>
-            <input name="username" type="text" class="form-control" id="username">
-        </div>
-        <div class="form-group">
-            <label for="password">Password</label>
-            <input name="password" type="password" class="form-control" id="password" value="">
-        </div>
-        <input type="submit" class="btn btn-default" value="Login"/>
+        <input type="hidden" name="next" value="{{ next }}">
+        {% if request.user.is_superuser %}
+            <input type="submit" name="logout" class="btn btn-default" value="Logout"/>
+        {% else %}
+            <div class="form-group">
+                <label for="username">Username</label>
+                <input name="username" type="text" class="form-control" id="username">
+            </div>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input name="password" type="password" class="form-control" id="password" value="">
+            </div>
+
+            <input type="submit" name="login" class="btn btn-default" value="Login"/>
+        {% endif %}
+
     </form>
 
 {%  endblock %}
