--- a/templates/monocle_cms/page.html
+++ b/templates/monocle_cms/page.html
@@ -5,6 +5,9 @@
 {% endblock %}
 
 {% block main %}
+    {% if request.user.is_superuser %}
+        <a href="/edit{{ request.path }}" class="btn btn-primary btn-lg" role="button" target="_blank">Edit</a>
+    {% endif %}
 
     <h1>{{ content.headline }}</h1>
     <p>
