--- a/templates/monocle_cms/base.html
+++ b/templates/monocle_cms/base.html
@@ -29,25 +29,27 @@
     <div>
         <div id="header-wrapper" class="container-fluid">
             <div class="row">
-                <div id="logo-wrapper" class="col-sm-7 col-md-6 col-lg-5 col-sm-offset-5 col-md-offset-6 col-lg-offset-7">
+                <div id="logo-wrapper" class="col-xs-12 col-sm-7 col-md-6 col-lg-5 col-sm-offset-5 col-md-offset-6 col-lg-offset-7"
+                style="padding: 2em;">
+                    <a href="/">
                     <div id="logo">
-                        <a href="/">
                         <h1>monoclecat.de</h1>
-                        <p>Electronics, Projects, Circuits, Tutorials & more</p>
-                        </a>
+                        <p style="letter-spacing: 3px; text-align: justify;">Circuits &#151 Programming &#151 Projects</p>
                     </div>
+                    </a>
                 </div>
             </div>
             <div id="menu" class="row">
-                {% ifequal language 'de' %}
-                    <div class="col-xs-4 col-sm-3 col-md-2 col-lg-2 col-sm-offset-1 col-md-offset-2 col-lg-offset-3"><a href="/de">Home</a></div>
-                    <div class="col-xs-4 col-sm-4 col-md-3 col-lg-2"><a href="/all-projects">All projects</a></div>
-                    <div class="col-xs-4 col-sm-3 col-md-3 col-lg-2"><a href="/about">About me</a></div>
+                {% ifequal language 'en' %}
+                    <div class="col-xs-4 col-sm-3 col-md-2 col-lg-2 col-sm-offset-2 col-md-offset-3 col-lg-offset-3"><a href="/de">Home</a></div>
+                    <div class="col-xs-4 col-sm-4 col-md-3 col-lg-2"><a href="{% url 'monocle_cms:about-de' %}">Über mich</a></div>
                 {% else %}
-                    <div class="col-xs-4 col-sm-3 col-md-2 col-lg-2 col-sm-offset-1 col-md-offset-2 col-lg-offset-3"><a href="/en">Home</a></div>
-                    <div class="col-xs-4 col-sm-4 col-md-3 col-lg-2"><a href="/?l=all-projects">All projects</a></div>
-                    <div class="col-xs-4 col-sm-3 col-md-3 col-lg-2"><a href="/?l=about">About me</a></div>
+                    <div class="col-xs-4 col-sm-3 col-md-2 col-lg-2 col-sm-offset-2 col-md-offset-3 col-lg-offset-3"><a href="/en">Home</a></div>
+                    <div class="col-xs-4 col-sm-4 col-md-3 col-lg-2"><a href="{% url 'monocle_cms:about-en' %}">About me</a></div>
                 {% endifequal %}
+                {% if request.user.is_superuser %}
+                    <div class="col-xs-4 col-sm-3 col-md-3 col-lg-2"><a href="{% url 'monocle_cms:admin' %}">Admin</a></div>
+                {% endif %}
             </div>
         </div>
     </div>
@@ -59,9 +61,9 @@
         </div>
 
         <div id="foot" class="container-fluid">
-            <div class="row">
-                <div class="col-xs-12 col-sm-6 col-md-4 col-sm-offset-3 col-md-offset-4">
-                <p>Enjoyed an article? <a href="/?l=donate">Consider donating.</a></p>
+            <div class="row" style="padding: 0.5em">
+                <div class="col-xs-12 col-sm-6 col-md-4 col-sm-offset-4 col-md-offset-5">
+                    <p><i>Have a nice day!</i></p>
                 </div>
             </div>
         </div>
