--- a/static/own-styles.css
+++ b/static/own-styles.css
@@ -59,6 +59,13 @@ body {
     flex-direction: column;
 }
 
+.show-on-hover {
+    display: none;
+}
+
+.hover-parent:hover .show-on-hover{
+    display: block;
+}
 
 /* -------------------- LOGO ---------------------*/
 #logo {
@@ -123,16 +130,4 @@ body {
 }
 #side a {
     color: rgba(62,62,132,0.8);
-}
-
-#side {
-white-space: -moz-pre-wrap !important;  /* Mozilla, since 1999 */
-white-space: -pre-wrap;      /* Opera 4-6 */
-white-space: -o-pre-wrap;    /* Opera 7 */
-white-space: pre-wrap;       /* css-3 */
-word-wrap: break-word;       /* Internet Explorer 5.5+ */
-white-space: -webkit-pre-wrap; /* Newer versions of Chrome/Safari*/
-word-break: break-all;
-white-space: normal;
-
 }
