--- a/templates/monocle_cms/image_upload.html
+++ b/templates/monocle_cms/image_upload.html
@@ -26,9 +26,14 @@ Image Upload - Monoclecat
             {% endifequal %}
             <div class="row same_height" style="padding: 0.5em">
             {% for image in tag.list %}
-                <div class="col-xs-6 col-sm-6 col-md-4 col-lg-3">
+                <div class="col-xs-6 col-sm-6 col-md-4 col-lg-3 hover-parent">
                     <a href="{{ image.file.url }}"><img src="{{ image.file.medium.url }}" class="img-responsive" ></a>
                     <h5>Primary key: {{ image.pk }}</h5>
+                    <form class="form-inline show-on-hover" action="{% url 'monocle_cms:image_upload' %}" method="post">
+                        {% csrf_token %}
+                        <input type="hidden" name="pk" value="{{ image.pk }}">
+                        <input type="submit" name="delete_single" class="btn btn-default btn-xs" value="Delete"/>
+                    </form>
                 </div>
             {% endfor %}
             </div>
