--- a/templates/monocle_cms/image_upload.html
+++ b/templates/monocle_cms/image_upload.html
@@ -19,7 +19,8 @@ Image Upload - Monoclecat
 
     {% for tag in images_tag_grouped %}
         <div style="padding: 0.5em; background-color: {% cycle '#f2f2f2' '#ffffff' %}">
-            <form class="form-inline" action="{% url 'monocle_cms:image_upload' %}" method="post">
+            <form onsubmit="return confirm('Are you sure?');"
+                  class="form-inline" action="{% url 'monocle_cms:image_upload' %}" method="post">
                 <h4>
                 {% ifequal tag.grouper "" %} No tag {% else %} {{ tag.grouper }} {% endifequal %}
                 {% csrf_token %}
@@ -32,7 +33,8 @@ Image Upload - Monoclecat
             {% for image in tag.list %}
                 <div class="col-xs-6 col-sm-6 col-md-4 col-lg-3 hover-parent">
                     <a href="{{ image.file.url }}"><img src="{{ image.file.medium.url }}" class="img-responsive" ></a>
-                    <form class="form-inline" action="{% url 'monocle_cms:image_upload' %}" method="post">
+                    <form onsubmit="return confirm('Are you sure?');"
+                          class="form-inline" action="{% url 'monocle_cms:image_upload' %}" method="post">
                         <h5>Primary key: {{ image.pk }}
                         {% csrf_token %}
                         <input type="hidden" name="pk" value="{{ image.pk }}">
