--- a/templates/monocle_cms/base.html
+++ b/templates/monocle_cms/base.html
@@ -48,7 +48,7 @@
                     <div class="col-xs-4 col-sm-4 col-md-3 col-lg-2"><a href="{% url 'monocle_cms:about-en' %}">About me</a></div>
                 {% endifequal %}
                 {% if request.user.is_superuser %}
-                    <div class="col-xs-4 col-sm-3 col-md-3 col-lg-2"><a href="{% url 'monocle_cms:admin' %}">Admin</a></div>
+                    <div class="col-xs-4 col-sm-3 col-md-3 col-lg-2"><a href="{% url 'monocle_cms:pages' %}">Pages</a></div>
                     <div class="col-xs-4 col-sm-3 col-md-3 col-lg-2"><a href="{% url 'monocle_cms:image_upload' %}">Images</a></div>
                 {% endif %}
             </div>
