--- a/templates/monocle_cms/pages.html
+++ b/templates/monocle_cms/pages.html
@@ -7,7 +7,7 @@ Admin - Monoclecat
 {% block main %}
     <h1>Page list</h1>
     <div class="row" style="margin: 1em">
-        <form class="form-inline" action="{% url 'monocle_cms:admin' %}" method="post">
+        <form class="form-inline" action="{% url 'monocle_cms:pages' %}" method="post">
             {% csrf_token %}
             <input type="hidden" name="next" value="/admin/">
             <input type="submit" name="new" class="btn btn-primary" value="Create new page"/>
@@ -18,7 +18,7 @@ Admin - Monoclecat
             <div class="col-xs-2">
                 <h3>PK: {{ item.pk }}</h3>
                 <form onsubmit="return confirm('Are you sure?');"
-                      class="form-inline" action="{% url 'monocle_cms:admin' %}" method="post">
+                      class="form-inline" action="{% url 'monocle_cms:pages' %}" method="post">
                     {% csrf_token %}
                     <input type="hidden" name="pk" value="{{ item.pk }}">
                     <input type="submit" name="delete" class="btn btn-default btn-xs" value="Delete"/>
