--- a/templates/py_monocle_cms/main_no_sidebar.html
+++ b/templates/py_monocle_cms/main_no_sidebar.html
@@ -1,4 +1,4 @@
-{% extends "monocle_cms/base.html" %}
+{% extends "py_monocle_cms/base.html" %}
 {% block maincontainer %}
     <!-- Main content -->
     <div id="maincontainer" class="col-xs-12                 col-sm-10 col-sm-offset-1
