--- a/templates/py_monocle_cms/main_with_sidebar.html
+++ b/templates/py_monocle_cms/main_with_sidebar.html
@@ -1,4 +1,4 @@
-{% extends "monocle_cms/base.html" %}
+{% extends "py_monocle_cms/base.html" %}
 {% block maincontainer %}
 <div id="maincontainer" class="col-xs-12                 col-sm-10 col-sm-offset-1
                                col-md-10 col-md-offset-1 col-lg-9 col-lg-offset-2">
@@ -36,21 +36,21 @@
 
         <div class="row"><h4>Meta<h4></div>
         {% ifequal language 'de' %}
-            <div class="row"><h5><a href="{% url 'monocle_cms:impressum-de' %}">Impressum</a></h5></div>
+            <div class="row"><h5><a href="{% url 'py_monocle_cms:impressum-de' %}">Impressum</a></h5></div>
         {% else %}
-            <div class="row"><h5><a href="{% url 'monocle_cms:impressum-en' %}">Imprint</a></h5></div>
+            <div class="row"><h5><a href="{% url 'py_monocle_cms:impressum-en' %}">Imprint</a></h5></div>
         {% endifequal %}
 
         {% if request.user.is_superuser %}
-            <div class="row"><h5><a href="{% url 'monocle_cms:image_upload' %}">Image Upload</a></h5></div>
-            <form class="form-inline" action="{% url 'monocle_cms:logout' %}" method="post">
+            <div class="row"><h5><a href="{% url 'py_monocle_cms:image_upload' %}">Image Upload</a></h5></div>
+            <form class="form-inline" action="{% url 'py_monocle_cms:logout' %}" method="post">
                 {% csrf_token %}
                 <input type="hidden" name="next" value="{{ request.path }}">
                 <input type="submit" name="logout" class="btn btn-default" value="Logout"
                 style="padding: 0.5em; margin: 4px;"/>
             </form>
         {% else %}
-            <div class="row"><h5><a href="{% url 'monocle_cms:login' %}">Login</a></h5></div>
+            <div class="row"><h5><a href="{% url 'py_monocle_cms:login' %}">Login</a></h5></div>
         {% endif %}
 
     </div>
