Added language flags to pages with sidebars

--- a/templates/py_monocle_cms/main_with_sidebar.html
+++ b/templates/py_monocle_cms/main_with_sidebar.html
@@ -9,6 +9,15 @@
     </div>
     <!-- Sidebar -->
     <div id="side" class="hidden-xs hidden-sm col-md-2">
+
+        <div class="row" style="padding: 1em 0em 0em 1em">
+            {% ifequal language 'de' %}
+                <a href="{% url 'py_monocle_cms:content' 'en' page.id '' %}"><b>Switch to</b> <img src="/py_monocle_cms/media/en_flag.png"></a>
+            {% else %}
+                <a href="{% url 'py_monocle_cms:content' 'de' page.id '' %}"><b>Wechsele zu</b> <img src="/py_monocle_cms/media/de_flag.png"></a>
+            {% endifequal %}
+        </div>
+
         {% ifequal language 'de' %}
             <div class="row"><h4>Vorgestellte Projekte</h4></div>
         {% else %}
