--- a/templates/py_monocle_cms/base.html
+++ b/templates/py_monocle_cms/base.html
@@ -40,7 +40,7 @@
                 </div>
             </div>
             <div id="menu" class="row">
-                {% ifequal language 'en' %}
+                {% ifequal language 'de' %}
                     <div class="col-xs-4 col-sm-3 col-md-2 col-lg-2 col-sm-offset-2 col-md-offset-3 col-lg-offset-3"><a href="/de">Home</a></div>
                     <div class="col-xs-4 col-sm-4 col-md-3 col-lg-2"><a href="{% url 'py_monocle_cms:about-de' %}">Über mich</a></div>
                 {% else %}
