--- a/static/own-styles.css
+++ b/static/own-styles.css
@@ -1,14 +1,7 @@
 body {
-    min-width: 400px;
     max-width: 100%;
     overflow-x: hidden;
-    background-color: rgba(62,62,132,0.1) !important;
-
-}
-
-#header-wrapper {
-    background:  url(/static/background.png) no-repeat;
-    background-size: cover;
+    background-color: rgba(62,62,132,0.1)  !important;
 }
 
 .asteriskField {
@@ -16,17 +9,27 @@ body {
 }
 
 #maincontainer {
-    border-width: 1px;
-    border-style: none solid solid solid;
-    border-color: rgba(62,62,132,0.4);
     padding: 0px;
-    background-color: #ffffff;
 }
 
 /* -------------------- MAIN ---------------------*/
 
+.tile {
+    background-color: rgba(250, 245, 245, 1);
+    padding: 0.5em 1em;
+    border-width: 1px;
+    border-style: none solid solid solid;
+    border-color: /*rgba(62,62,132,0.4)*/ rgba(200, 200, 200, 1);
+    border-radius: 5px;
+    margin: 5px 0px;
+}
+
+.tile h2 {
+    margin: 5px 0px;
+}
+
 #main {
-    padding: 20px;
+    padding: 0px 5px;
     font-family: 'Roboto', sans-serif;
 }
 
@@ -61,40 +64,52 @@ body {
 
 
 /* -------------------- LOGO ---------------------*/
+#menu, #logo {
+    background-color: #DCB257;
+}
+
 #logo {
-    padding: 1em;
     display: inline-block;
-    background-color: rgba(62,62,132, 0.9);
+    padding: 20px;
 }
-#logo:hover {
-    background-color: rgba(62,62,132, 1);
+
+#logo:hover p {
+    font-weight: 900;
 }
+
+#logo h1, #logo p {
+    color: #1B2E53;
+}
+
 #logo h1 {
     font-family: 'Roboto', sans-serif;
     font-weight: 700;
-    margin: 0;
-    color: rgba(255,255,255,0.9);
     letter-spacing: 0px;
-    font-size: 3.5em;
+    font-size: 7vh;
+    margin: 0px;
 }
+
 #logo p {
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
     padding: 0px;
-    letter-spacing: 0.1em;
+    font-size: 2vh;
     text-transform: none;
-    color: rgba(255,255,255,0.5);
+    margin: 0px;
+    letter-spacing: 3px;
+    text-align: justify;
 }
 #logo a:hover {
     text-decoration: none;
 }
 
-/* -------------------- MENU ---------------------*/
-#menu {
-  background-color: rgba(62,62,132, 0.9);
+/* -------------------- MENU & SIDEBAR ---------------------*/
+
+#menu a, #menu p, .dropdown-menu li a, #side a {
+    color: #1B2E53;
 }
 
-#menu a {
+#menu a, #menu p {
 	display: block;
 	line-height: 40px;
 	letter-spacing: 1px;
@@ -103,24 +118,39 @@ body {
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
 	font-size: 15px;
-	color: rgba(255,255,255,0.7);
 }
-#menu a:hover {
-	color: rgba(255,255,255,1);
+#menu .dropdown-menu li a {
+    display: block;
+	line-height: 20px;
+	letter-spacing: 1px;
+	text-decoration: none;
+	text-align: left;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+	font-size: 15px;
+}
+#menu a:hover, #menu p:hover {
+	font-weight: 900;
 }
 
-/* -------------------- SIDEBAR ---------------------*/
-#side {
-    background-color: rgba(62,62,132,0.05);
-    height: 100%;
-    padding: 0px 20px 20px 10px; /*top right bottom left*/
+#side, .dropdown-menu {
+    background-color: rgba(200, 200, 200, 1) !important;
 }
+
+#side {
+    height: 100%;
+    padding: 0px 20px 20px 15px; /*top right bottom left*/
+    border-radius: 5px;
+    margin: 5px 0px;
+}
+
 #side h4 {
     margin-left: 10px;
 }
+.dropdown-menu h4 {
+    margin-left: 5px;
+}
+
 #side h5 {
     margin: 3px 0px 3px 20px; /*top right bottom left*/
-}
-#side a {
-    color: rgba(62,62,132,0.8);
 }
