--- a/templates/py_monocle_cms/base.html
+++ b/templates/py_monocle_cms/base.html
@@ -1,12 +1,20 @@
 {% load bootstrap3 %}
-{% load static %}
+{% load static from staticfiles %}
 <!DOCTYPE html>
-<html lang="{{ language }}">
+<html lang="en_US">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta content='width=device-width, initial-scale=1, maximum-scale=1' name='viewport' />
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <!-- Chrome, Firefox OS and Opera -->
+    <meta name="theme-color" content="#1B2E53">
+    <!-- Windows Phone -->
+    <meta name="msapplication-navbutton-color" content="#1B2E53">
+    <!-- iOS Safari -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
     <title>{% block title %}{% endblock %}</title>
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,300,300italic,400italic,500italic" rel="stylesheet" type="text/css">
@@ -23,38 +31,48 @@
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <![endif]https://s3.eu-central-1.amazonaws.com/homepage-bucket-pymonocle-cms/pcbvariations4.jpg-->
 </head>
-<body>
-    <div>
-        <div id="header-wrapper" class="container-fluid">
-            <div class="row">
-                <div id="logo-wrapper" class="col-xs-12 col-sm-7 col-md-6 col-lg-5 col-sm-offset-5 col-md-offset-6 col-lg-offset-7"
-                style="padding: 2em;">
-                    <a href="/">
-                    <div id="logo">
-                        <h1>monoclecat.de</h1>
-                        <p style="letter-spacing: 3px; text-align: justify;">Circuits &#151 Programming &#151 Projects</p>
-                    </div>
-                    </a>
+<body style="background: url({% static 'pcbvariations4.jpg' %}) repeat;">
+    <div id="header-wrapper" class="container-fluid">
+        <div class="row">
+            <div id="logo-wrapper" class="col-xs-12 col-sm-7 col-md-6 col-lg-5 col-sm-offset-5 col-md-offset-6 col-lg-offset-7"
+            style="padding: 2em;">
+                <a href="/">
+                <div id="logo">
+                    <h1>monoclecat.io</h1>
+                    <p>Circuits &#151 Programming &#151 Projects</p>
                 </div>
-            </div>
-            <div id="menu" class="row">
-                {% ifequal language 'de' %}
-                    <div class="col-xs-4 col-sm-3 col-md-2 col-lg-2 col-sm-offset-2 col-md-offset-3 col-lg-offset-3"><a href="/de">Home</a></div>
-                    <div class="col-xs-4 col-sm-4 col-md-3 col-lg-2"><a href="{% url 'py_monocle_cms:about-de' %}">Über mich</a></div>
-                {% else %}
-                    <div class="col-xs-4 col-sm-3 col-md-2 col-lg-2 col-sm-offset-2 col-md-offset-3 col-lg-offset-3"><a href="/en">Home</a></div>
-                    <div class="col-xs-4 col-sm-4 col-md-3 col-lg-2"><a href="{% url 'py_monocle_cms:about-en' %}">About me</a></div>
-                {% endifequal %}
-                {% if request.user.is_superuser %}
-                    <div class="col-xs-4 col-sm-3 col-md-3 col-lg-2"><a href="{% url 'py_monocle_cms:pages' %}">Pages</a></div>
-                    <div class="col-xs-4 col-sm-3 col-md-3 col-lg-2"><a href="{% url 'py_monocle_cms:image_upload' %}">Images</a></div>
-                {% endif %}
+                </a>
             </div>
         </div>
     </div>
     <div class="container-fluid">
+        <div class="row">
+            <div id="menu" class="col-xs-12                 col-sm-10 col-sm-offset-1
+                            col-md-10 col-md-offset-1 col-lg-9 col-lg-offset-2">
+                    {% block menu_dropdown %}
+
+                    {% endblock %}
+                    <div class="col-xs-4 col-sm-3 col-md-2 col-lg-2">
+                        <a href="/"><span class="glyphicon glyphicon-home"></span> Home</a></div>
+
+                    <div class="col-xs-4 col-sm-4 col-md-3 col-lg-2" style="white-space: nowrap; overflow: hidden">
+                        <a href="{% url 'py_monocle_cms:about' %}">
+                            <span class="glyphicon glyphicon-user"></span> About me</a></div>
+
+                    {% if request.user.is_superuser %}
+                        <div class="col-xs-4 col-sm-3 col-md-3 col-lg-2">
+                            <a href="{% url 'py_monocle_cms:pages' %}">
+                                <span class="glyphicon glyphicon-folder-open"></span> Pages</a></div>
+
+                        <div class="col-xs-4 col-sm-3 col-md-3 col-lg-2">
+                            <a href="{% url 'py_monocle_cms:image_upload' %}">
+                                <span class="glyphicon glyphicon-picture"></span> Images</a></div>
+                    {% endif %}
+                </div>
+
+        </div>
         <div class="row">
             {% block maincontainer %}
                 <!-- Main content -->
@@ -62,9 +80,9 @@
         </div>
 
         <div id="foot" class="container-fluid">
-            <div class="row" style="padding: 0.5em">
+            <div class="row" style="padding: 4em">
                 <div class="col-xs-12 col-sm-6 col-md-4 col-sm-offset-4 col-md-offset-5">
-                    <p><i>Have a nice day!</i></p>
+                    <p style="color: white"><i>Have a nice day!</i> <img src="{% static "pixel_monoclecat_white.png" %}"></p>
                 </div>
             </div>
         </div>
