--- a/templates/py_monocle_cms/login_page.html
+++ b/templates/py_monocle_cms/login_page.html
@@ -5,30 +5,32 @@ Login - Monoclecat
 {% endblock %}
 
 {% block main %}
-    {% if request.user.is_superuser %}
-    <h1>Logout</h1>
-    {% else %}
-    <h1>Login</h1>
-    {% endif %}
-
-    <form class="form-inline" action="{% url 'py_monocle_cms:login' %}" method="post">
-    {% csrf_token %}
-        <input type="hidden" name="next" value="{{ next }}">
+    <div class="tile">
         {% if request.user.is_superuser %}
-            <input type="submit" name="logout" class="btn btn-default" value="Logout"/>
+        <h1>Logout</h1>
         {% else %}
-            <div class="form-group">
-                <label for="username">Username</label>
-                <input name="username" type="text" class="form-control" id="username">
-            </div>
-            <div class="form-group">
-                <label for="password">Password</label>
-                <input name="password" type="password" class="form-control" id="password" value="">
-            </div>
-
-            <input type="submit" name="login" class="btn btn-default" value="Login"/>
+        <h1>Login</h1>
         {% endif %}
 
-    </form>
+        <form class="form-inline" action="{% url 'py_monocle_cms:login' %}" method="post">
+        {% csrf_token %}
+            <input type="hidden" name="next" value="{{ next }}">
+            {% if request.user.is_superuser %}
+                <input type="submit" name="logout" class="btn btn-default" value="Logout"/>
+            {% else %}
+                <div class="form-group">
+                    <label for="username">Username</label>
+                    <input name="username" type="text" class="form-control" id="username">
+                </div>
+                <div class="form-group">
+                    <label for="password">Password</label>
+                    <input name="password" type="password" class="form-control" id="password" value="">
+                </div>
+
+                <input type="submit" name="login" class="btn btn-default" value="Login"/>
+            {% endif %}
+
+        </form>
+    </div>
 
 {%  endblock %}
