--- a/templates/py_monocle_cms/main_with_sidebar.html
+++ b/templates/py_monocle_cms/main_with_sidebar.html
@@ -1,7 +1,62 @@
 {% extends "py_monocle_cms/base.html" %}
+{% block menu_dropdown %}
+    {# The following corresponds to the side bar <div> below #}
+    <div class="dropdown col-xs-4 col-sm-2 hidden-md hidden-lg">
+        <div class="dropdown-toggle" id="dropdown_sidebar" data-toggle="dropdown">
+            <p>Menu <span class="glyphicon glyphicon-menu-hamburger"></span></p>
+        </div>
+        <ul class="dropdown-menu" aria-labelledby="dropdown_sidebar">
+            <li><h4>Featured Projects</h4></li>
+            {% for project in featured_pages %}
+                <li><a href="/{{project.0}}/">{{project.1}}</a></li>
+            {% endfor %}
+
+            <li role="separator" class="divider"></li>
+            <li><h4>Social Media</h4></li>
+            <li><a href="https://github.com/monoclecat">Github</a></li>
+            <li><a href="https://www.youtube.com/c/TheMonoclecat">Youtube</a></li>
+            <li><a href="https://www.instructables.com/member/Candymanproductions">Instructables</a></li>
+            <li><a href="https://plus.google.com/+TheMonoclecat/">Google+</a></li>
+
+            <li role="separator" class="divider"></li>
+            <li><h4>Other Projects</h4></li>
+
+            {% for project in other_pages %}
+                <!--div class="row"><h5><a href="/{{project.0}}/">{{project.1}}</a></h5></div-->
+                <li><a href="/{{project.0}}">{{project.1}}</a></li>
+            {% endfor %}
+
+            <li role="separator" class="divider"></li>
+
+            <li><a href="{% url 'py_monocle_cms:imprint' %}">Impressum</a></li>
+
+            {% if request.user.is_superuser %}
+                <li><a href="{% url 'py_monocle_cms:image_upload' %}">Image Upload</a></li>
+                <form class="form-inline" action="{% url 'py_monocle_cms:logout' %}" method="post">
+                    {% csrf_token %}
+                    <input type="hidden" name="next" value="{{ request.path }}">
+                    <input type="submit" name="logout" class="btn btn-default" value="Logout"
+                    style="padding: 0.5em; margin: 4px;"/>
+                </form>
+            {% else %}
+                <li><a href="{% url 'py_monocle_cms:login' %}">Login</a></li>
+            {% endif %}
+        </ul>
+    </div>
+{% endblock %}
 {% block maincontainer %}
 <div id="maincontainer" class="col-xs-12                 col-sm-10 col-sm-offset-1
                                col-md-10 col-md-offset-1 col-lg-9 col-lg-offset-2">
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-62260839-3', 'auto');
+      ga('send', 'pageview');
+
+    </script>
     <!-- Main content -->
     <div id="main" class="col-xs-12 col-sm-12 col-md-10">
         {% block main %}
@@ -10,53 +65,27 @@
     <!-- Sidebar -->
     <div id="side" class="hidden-xs hidden-sm col-md-2">
 
-        <div class="row" style="padding: 1em 0em 0em 1em">
-            {% ifequal language 'de' %}
-                {% if page.id %}
-                    <a href="{% url 'py_monocle_cms:content' 'en' page.id '' %}"><b>Switch to</b> <img src="/py_monocle_cms/media/en_flag.png"></a>
-                {% else %}
-                    <a href="{% url 'py_monocle_cms:index' 'en' %}"><b>Switch to</b> <img src="/py_monocle_cms/media/en_flag.png"></a>
-                {% endif %}
-            {% else %}
-                {% if page.id %}
-                    <a href="{% url 'py_monocle_cms:content' 'de' page.id '' %}"><b>Wechsele zu</b> <img src="/py_monocle_cms/media/de_flag.png"></a>
-                {% else %}
-                    <a href="{% url 'py_monocle_cms:index' 'de' %}"><b>Wechsele zu</b> <img src="/py_monocle_cms/media/de_flag.png"></a>
-                {% endif %}
-            {% endifequal %}
-        </div>
-
-        {% ifequal language 'de' %}
-            <div class="row"><h4>Vorgestellte Projekte</h4></div>
-        {% else %}
-            <div class="row"><h4>Featured Projects</h4></div>
-        {% endifequal %}
+        <div class="row"><h4><span class="glyphicon glyphicon-star"></span> Featured Projects</h4></div>
         {% for project in featured_pages %}
-            <div class="row"><h5><a href="/{{language}}/{{project.0}}/">{{project.1}}</a></h5></div>
+            <div class="row"><h5><a href="/{{project.0}}/">{{project.1}}</a></h5></div>
         {% endfor %}
 
-        <div class="row"><h4>Social Media</h4></div>
+        <div class="row"><h4><span class="glyphicon glyphicon-globe"></span> Social Media</h4></div>
         <div class="row"><h5><a href="https://github.com/monoclecat">Github</a></h5></div>
         <div class="row"><h5><a href="https://www.youtube.com/c/TheMonoclecat">Youtube</a></h5></div>
         <div class="row"><h5><a href="https://www.instructables.com/member/Candymanproductions">Instructables</a></h5></div>
         <div class="row"><h5><a href="https://plus.google.com/+TheMonoclecat/">Google+</a></h5></div>
 
-        {% ifequal language 'de' %}
-            <div class="row"><h4>Andere Projekte</h4></div>
-        {% else %}
-            <div class="row"><h4>Other Projects</h4></div>
-        {% endifequal %}
+        <div class="row"><h4>Other Projects</h4></div>
+
         {% for project in other_pages %}
-            <!--div class="row"><h5><a href="/{{language}}/{{project.0}}/">{{project.1}}</a></h5></div-->
-            <div class="row"><h5><a href="/{{language}}/#{{project.0}}">{{project.1}}</a></h5></div>
+            <!--div class="row"><h5><a href="/{{project.0}}/">{{project.1}}</a></h5></div-->
+            <div class="row"><h5><a href="/#{{project.0}}">{{project.1}}</a></h5></div>
         {% endfor %}
 
         <div class="row"><h4>Meta<h4></div>
-        {% ifequal language 'de' %}
-            <div class="row"><h5><a href="{% url 'py_monocle_cms:imprint-de' %}">Impressum</a></h5></div>
-        {% else %}
-            <div class="row"><h5><a href="{% url 'py_monocle_cms:imprint-en' %}">Imprint</a></h5></div>
-        {% endifequal %}
+
+        <div class="row"><h5><a href="{% url 'py_monocle_cms:imprint' %}">Impressum</a></h5></div>
 
         {% if request.user.is_superuser %}
             <div class="row"><h5><a href="{% url 'py_monocle_cms:image_upload' %}">Image Upload</a></h5></div>
@@ -71,12 +100,5 @@
         {% endif %}
 
     </div>
-    <script>
-        var elem = document.getElementById('maincontainer');
-        var containerHeight = elem.offsetHeight;
-        var lastChild = elem.childNodes[elem.childNodes.length - 1];
-        var verticalOffset = lastChild.offsetTop + lastChild.offsetHeight;
-        document.getElementById('side').style.height = (containerHeight - verticalOffset) + "px";
-    </script>
 </div>
 {% endblock %}
